# logic-expression

./: BNF.txt  README.md  logic-expr.cabal  logic-expression.cabal
src/: LogicExpr.hs  LogicExpression.hs
