name:                logic-expr
version:             0.1.0.0
synopsis:            Logic Expression
-- description:         
homepage:            https://github.com/foreverbell/logic-expr
--- license:             
--- license-file:        
author:              foreverbell
maintainer:          dql.foreverbell@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.10.2

executable logic-expr
  ghc-options:         -O2 -W -fwarn-tabs
  main-is:             LogicExpr.hs
  -- other-extensions:    
  -- other-modules:       
  build-depends: 
    base           == 4.8.*,
    text           == 1.2.*, 
    containers     == 0.5.*, 
    parsec         == 3.1.*,
    mtl            >= 2.2.1
  default-language:    Haskell2010
  Hs-source-dirs:      src
